--- a/bootstrap-css.css
+++ b/bootstrap-css.css
@@ -4,7 +4,7 @@ html{
 }
 
 body{
-  background-color: #708090;
+    background-color: #404040;
   text-align: center;
 }
 
@@ -36,12 +36,16 @@ ul{
 }
 
 .greybox{
-  background-color: rgba(220,220,220,0.5);
+background: #A0A0A0!important;
+margin: 15px 0px!important;
+border-radius: 5px!important;
+box-shadow: 0 0 2px rgba(0,0,0,0.3)!important;
 }
 
 .content{
-  margin-left: 2%;
-  margin-right: 2%;
-  margin-top: 2%;
-  margin-bottom: 2%;
+width:95%!important;
+    margin-left: 5px;
+padding-top:5px!important;
+    padding-bottom: 5px;
+padding-left:5px!important;
 }
